# OrcaBot

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  DEPLOYMENT.md  DESKTOP.md  Makefile  PLAN-custom-endpoints.md  PLAN-threat-detection.md  README.md  THIRD-PARTY-LICENSES  fly.toml  go.mod  package-lock.json  package.json  todo.txt  wrangler.toml
.github/workflows/: check-catalogs.yml  check-desktop-drift.yml
api/: openapi.yaml
apps/cloudflare/: .gitignore  package-lock.json  package.json  wrangler.toml
apps/frontend/: CLAUDE.md  package-lock.json
apps/sandbox/: .gitignore  fly.toml
benchmarks/: README.md
benchmarks/frontiercode/: NOT-RUNNABLE.md
benchmarks/slopcodebench/: README.md  RESUME-kimi-opencode.md  config-wizard.md  orchestrator-runbook.md  template.json
benchmarks/swebench/: README.md  config-wizard.md  orchestrator-runbook.md  template.json
benchmarks/swebench-pro/: README.md  config-wizard.md  orchestrator-runbook.md  template.json
benchmarks/terminal-bench/: README.md  config-wizard.md  orchestrator-runbook.md  template.json
bridge/: CLAUDE.md  Dockerfile  Makefile  fly.dev.toml  fly.toml  package-lock.json  package.json
bridge/src/: index.ts  session-manager.ts
cmd/server/: integration_test.go  main.go  main_test.go
controlplane/: .dev.vars.example  CLAUDE.md  package-lock.json  package.json  schema.sql  splash_codex.html  wrangler.dev.toml  wrangler.gemini.toml  wrangler.production.toml  wrangler.toml
controlplane/.claude/: settings.local.json
controlplane/api/: backend-api.yaml
controlplane/src/: index.ts  types.ts
controlplane/tests/: helpers.ts  integration.test.ts
desktop/: CLAUDE.md  README.md  RELEASE.md
desktop/app/: README.md  loading.html
desktop/app/src-tauri/: Cargo.toml  build.rs  entitlements-vz-helper.plist  entitlements-workerd.plist  entitlements.plist  tauri.conf.json  vm-image.json
desktop/app/src-tauri/capabilities/: default.json
desktop/app/src-tauri/icons/: icon.icns
desktop/app/src-tauri/permissions/autogenerated/: cancel_google_sign_in.toml  clear_cloud_credential.toml  download_cloud_workspace.toml  get_cloud_account.toml  get_cloud_dashboard.toml  get_surface_token.toml  get_workspace_path.toml  import_folder.toml  list_cloud_dashboards.toml  read_startup_log.toml  reveal_workspace.toml  rollback_sign_in.toml  set_cloud_credential.toml  sign_in_google_loopback.toml  switch_to_cli.toml  verify_orcabot_account.toml
desktop/app/src-tauri/resources/workerd/config/: workerd.desktop.capnp
desktop/app/src-tauri/src/: commands.rs  main.rs
desktop/app/src-tauri/src/vm/: config.rs  error.rs  image.rs  linux.rs  macos.rs  mod.rs  windows.rs
desktop/app/src-tauri/vz-helper/: Package.swift  build.sh
desktop/app/src-tauri/vz-helper/Sources/: main.swift
desktop/d1-shim/: README.md  go.mod  main.go
desktop/profile/: schema.json
desktop/scripts/: build-desktop-resources.sh  check-drift.mjs  dev.sh  drift-allowlist.json  publish-release.sh  publish-vm-image.sh  release.sh  tauri-dev.sh
desktop/tests/: browser-smoke.sh  first-prompt-smoke.sh  regression-smoke.sh  release-preflight.sh  (+1 more)
docker/: Dockerfile
e2e/: .env.example  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: .gitignore  CLAUDE.md  eslint.config.mjs  next.config.ts  opennext.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts  wrangler.dev.toml  wrangler.gemini.toml  wrangler.toml
sandbox/: CLAUDE.md  Makefile  fly.toml  go.mod
src/: index.ts  types.ts
tests/: helpers.ts  integration.test.ts
(+595 files in other folders)
