[package]
name = "orcabot-desktop"
version = "0.0.0"
edition = "2021"
description = "Orcabot Desktop shell"
license = "UNLICENSED"

# The Tauri GUI app (default binary from src/main.rs).
[[bin]]
name = "orcabot-desktop"
path = "src/main.rs"

# The `orcabot` CLI: launches the desktop services headlessly and drives them from
# the terminal (exec/status/agents/integrations). Does not reference Tauri.
[[bin]]
name = "orcabot"
path = "src/bin/orcabot.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
libc = "0.2"
flate2 = "1"
filetime = "0.2"
ctrlc = "3"
# Minimal blocking HTTP client for the CLI (localhost only — no TLS needed).
ureq = { version = "2", default-features = false, features = ["json"] }

# Note: virt-fwk for native Virtualization.framework on macOS is not yet
# stable enough. The current implementation uses QEMU as a fallback.
# Uncomment when virt-fwk is ready:
# [target.'cfg(target_os = "macos")'.dependencies]
# virt-fwk = "0.1"
